# klash-v2

./: .dockerignore  Makefile  README.md  pyproject.toml  setup.cfg
app/: admin.py  constants.py  main.py  tasks.py
app/api/: api.py
app/api/tools/: admin.py  health.py
app/core/: events.py
app/core/settings/: app.py  base.py  development.py  production.py  test.py
app/database/: models.py  settings.py
app/database/repositories/: redis.py
app/services/: constants.py
app/services/instagram/: base.py  models.py  tasks.py
app/services/telegram/: base.py  models.py
app/services/vk/: base.py  friends.py  models.py
app/utils/: exceptions.py  logger.py
deploy/: Makefile  docker-compose.yml
docker/: Dockerfile  ci.sh  gunicorn_conf.py
migrations/models/: 0_20221215185854_init.py
tests/reports/: fixtures.py  mocks.py  responses.py  test_free_reports.py  test_paid_reports.py
tests/utils/: fixtures.py  test_tools.py  test_transliteration.py
